working on podecast hero section

--- a/blog.html
+++ b/blog.html
@@ -43,7 +43,7 @@
                                     <li><a href="#">Projects</a></li>
                                     <li><a href="#">caseStudies</a></li>
                                     <li><a class="active" href="#">Blogs</a></li>
-                                    <li><a href="#">Podcast</a></li>
+                                    <li><a href="podcast.html">Podcast</a></li>
                                 </ul>
                             </div>
                             <div class="navbar-button flex">
