working on podcast section

--- a/podcast.html
+++ b/podcast.html
@@ -176,6 +176,87 @@
             </div>
         </section>
 
+        <!--==================================== PODCASTS EPISODE SECTION STRACTURE LAYOUT ================================= -->
+
+        <section class="episodes">
+            <div class="container">
+                <div class="episode_description grid">
+                    <div>
+                        <h2>Recent Episodes</h2>
+                        <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black.</p>
+                    </div>
+                    <div class="span-2"></div>
+                </div>
+                <div class="episode_content grid">
+                    <div class="single_episode">
+                        <div class="ep_img">
+                            <img src="assets/img/podcast/Image.png" alt="" class="img-fluid">
+                            <a href="#" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
+                        </div>
+                        <div class="ep_details">
+                            <h3><a href="">Ep 1: How to build a world-class business brand</a></h3>
+                            <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+                            <a href="" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
+                        </div>
+                    </div>
+                    <div class="single_episode">
+                        <div class="ep_img">
+                            <img src="assets/img/podcast/Image (1).png" alt="" class="img-fluid">
+                            <a href="#" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
+                        </div>
+                        <div class="ep_details">
+                            <h3><a href="">Ep 1: How to build a world-class business brand</a></h3>
+                            <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+                            <a href="" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
+                        </div>
+                    </div>
+                    <div class="single_episode">
+                        <div class="ep_img">
+                            <img src="assets/img/podcast/Image (2).png" alt="" class="img-fluid">
+                            <a href="#" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
+                        </div>
+                        <div class="ep_details">
+                            <h3><a href="">Ep 1: How to build a world-class business brand</a></h3>
+                            <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+                            <a href="" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
+                        </div>
+                    </div>
+                    <div class="single_episode">
+                        <div class="ep_img">
+                            <img src="assets/img/podcast/Image.png" alt="" class="img-fluid">
+                            <a href="#" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
+                        </div>
+                        <div class="ep_details">
+                            <h3><a href="">Ep 1: How to build a world-class business brand</a></h3>
+                            <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+                            <a href="" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
+                        </div>
+                    </div>
+                    <div class="single_episode">
+                        <div class="ep_img">
+                            <img src="assets/img/podcast/Image (1).png" alt="" class="img-fluid">
+                            <a href="#" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
+                        </div>
+                        <div class="ep_details">
+                            <h3><a href="">Ep 1: How to build a world-class business brand</a></h3>
+                            <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+                            <a href="" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
+                        </div>
+                    </div>
+                    <div class="single_episode">
+                        <div class="ep_img">
+                            <img src="assets/img/podcast/Image (2).png" alt="" class="img-fluid">
+                            <a href="#" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
+                        </div>
+                        <div class="ep_details">
+                            <h3><a href="">Ep 1: How to build a world-class business brand</a></h3>
+                            <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+                            <a href="" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 </main>
 
