single podcast episode

--- a/podcast.html
+++ b/podcast.html
@@ -191,70 +191,77 @@
                     <div class="single_episode">
                         <div class="ep_img">
                             <img src="assets/img/podcast/Image.png" alt="" class="img-fluid">
-                            <a href="#" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
+                            <a href="single_podcast.html" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
                         </div>
                         <div class="ep_details">
-                            <h3><a href="">Ep 1: How to build a world-class business brand</a></h3>
+                            <h3><a href="single_podcast.html">Ep 1: How to build a world-class business brand</a></h3>
                             <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-                            <a href="" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
+                            <a href="single_podcast.html" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
                         </div>
                     </div>
                     <div class="single_episode">
                         <div class="ep_img">
                             <img src="assets/img/podcast/Image (1).png" alt="" class="img-fluid">
-                            <a href="#" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
+                            <a href="single_podcast.html" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
                         </div>
                         <div class="ep_details">
-                            <h3><a href="">Ep 1: How to build a world-class business brand</a></h3>
+                            <h3><a href="single_podcast.html">Ep 1: How to build a world-class business brand</a></h3>
                             <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-                            <a href="" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
+                            <a href="single_podcast.html" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
                         </div>
                     </div>
                     <div class="single_episode">
                         <div class="ep_img">
                             <img src="assets/img/podcast/Image (2).png" alt="" class="img-fluid">
-                            <a href="#" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
+                            <a href="single_podcast.html" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
                         </div>
                         <div class="ep_details">
-                            <h3><a href="">Ep 1: How to build a world-class business brand</a></h3>
+                            <h3><a href="single_podcast.html">Ep 1: How to build a world-class business brand</a></h3>
                             <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-                            <a href="" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
+                            <a href="single_podcast.html" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
                         </div>
                     </div>
                     <div class="single_episode">
                         <div class="ep_img">
                             <img src="assets/img/podcast/Image.png" alt="" class="img-fluid">
-                            <a href="#" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
+                            <a href="single_podcast.html" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
                         </div>
                         <div class="ep_details">
-                            <h3><a href="">Ep 1: How to build a world-class business brand</a></h3>
+                            <h3><a href="single_podcast.html">Ep 1: How to build a world-class business brand</a></h3>
                             <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-                            <a href="" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
+                            <a href="single_podcast.html" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
                         </div>
                     </div>
                     <div class="single_episode">
                         <div class="ep_img">
                             <img src="assets/img/podcast/Image (1).png" alt="" class="img-fluid">
-                            <a href="#" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
+                            <a href="single_podcast.html" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
                         </div>
                         <div class="ep_details">
-                            <h3><a href="">Ep 1: How to build a world-class business brand</a></h3>
+                            <h3><a href="single_podcast.html">Ep 1: How to build a world-class business brand</a></h3>
                             <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-                            <a href="" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
+                            <a href="single_podcast.html" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
                         </div>
                     </div>
                     <div class="single_episode">
                         <div class="ep_img">
                             <img src="assets/img/podcast/Image (2).png" alt="" class="img-fluid">
-                            <a href="#" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
+                            <a href="single_podcast.html" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
                         </div>
                         <div class="ep_details">
-                            <h3><a href="">Ep 1: How to build a world-class business brand</a></h3>
+                            <h3><a href="single_podcast.html">Ep 1: How to build a world-class business brand</a></h3>
                             <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-                            <a href="" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
+                            <a href="single_podcast.html" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
                         </div>
                     </div>
                 </div>
+                <ul class="pagination flex" style="justify-content: flex-start;column-gap: 20px;">
+                    <li><a class="active" href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li class="disabled">...</li>
+                    <li><a href="#">12</a></li>
+                    <li><a href="#">next</a></li>
+                </ul>
             </div>
         </section>
 
