complete podecast section

--- a/single_podcast.html
+++ b/single_podcast.html
@@ -90,13 +90,16 @@
             </div>
         </section>
 
-        <!--==================================== SINGLE PODCAST HERO SECTION STRUCTURE LAYOUT ================================= -->
+        <!--==================================== SINGLE PODCAST DETAILS SECTION STRUCTURE LAYOUT ================================= -->
 
         <section class="episode_details">
             <div class="container">
                 <div class="grid episode_grid ">
                     <div class="episode_context span-2">
-                        <h1>A podcast for makers and entrepreneurs</h1>
+                        <div class="podecast_title grid">
+                            <h1 class="span-2">A podcast for makers and entrepreneurs</h1>
+                            <h1></h1>
+                        </div>
                         <blockquote>
                             <p>
                                 At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
@@ -111,7 +114,7 @@
                             <p>
                                 At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
                             </p>
-                            <ul>
+                            <ul style="margin-left: 40px;">
                                 <li>we both celebrate and challenge</li>
                                 <li>the culture around us as we orient our lives around Jesus</li>
                                 <li>we want to help you take that next step</li>
@@ -119,12 +122,12 @@
 
                             <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
                         </blockquote>
-                        <div class="context_mekar">
+                        <div class="context_mekar grid">
                             <div class="profile">
                                 <img src="assets/img/podcast/Mekar.png" alt="">
                                 <h3>Eve Madien</h3>
                                 <p>Producer & Art Director</p>
-                                <div>
+                                <div style="margin-top: 15px;">
                                     <a href="#"><img src="assets/img/podcast/Vector (2).png" alt=""></a>
                                     <a href="#"><img src="assets/img/podcast/Instagram (1).png" alt=""></a>
                                     <a href="#"><img src="assets/img/podcast/LinkedIn (1).png" alt=""></a>
@@ -135,10 +138,86 @@
                             </div>
                         </div>
                     </div>
-                    <div></div>
+                    <div class="listening">
+                        <h3>Listen on</h3>
+                        <ul>
+                            <li>
+                                <a class="flex" href="">
+                                    <img src="assets/img/podcast/Group 40.png" alt=""><span>Apple Podcasts</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="flex" href="">
+                                    <img src="assets/img/podcast/Group 41.png" alt=""><span>Goggle Podcasts</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="flex" href="">
+                                    <img src="assets/img/podcast/Vector (1).png" alt=""><span>Spotify</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="flex" href="">
+                                    <img src="assets/img/podcast/Rectangle 9997.png" alt=""><span>Youtube</span>
+                                </a>
+                            </li>
+                                
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
+
+
+        <!--==================================== PODCASTS EPISODE SECTION STRACTURE LAYOUT ================================= -->
+
+        <section class="episodes">
+                <div class="container">
+                    <div class="episode_description grid">
+                        <div>
+                            <h2>Recent Episodes</h2>
+                            <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black.</p>
+                        </div>
+                        <div class="span-2"></div>
+                    </div>
+                    <div class="episode_content grid">
+                        <div class="single_episode">
+                            <div class="ep_img">
+                                <img src="assets/img/podcast/Image.png" alt="" class="img-fluid">
+                                <a href="single_podcast.html" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
+                            </div>
+                            <div class="ep_details">
+                                <h3><a href="single_podcast.html">Ep 1: How to build a world-class business brand</a></h3>
+                                <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+                                <a href="single_podcast.html" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
+                            </div>
+                        </div>
+                        <div class="single_episode">
+                            <div class="ep_img">
+                                <img src="assets/img/podcast/Image (1).png" alt="" class="img-fluid">
+                                <a href="single_podcast.html" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
+                            </div>
+                            <div class="ep_details">
+                                <h3><a href="single_podcast.html">Ep 1: How to build a world-class business brand</a></h3>
+                                <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+                                <a href="single_podcast.html" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
+                            </div>
+                        </div>
+                        <div class="single_episode">
+                            <div class="ep_img">
+                                <img src="assets/img/podcast/Image (2).png" alt="" class="img-fluid">
+                                <a href="single_podcast.html" class="mic"><img src="assets/img/podcast/Episode Icon.png" alt=""></a>
+                            </div>
+                            <div class="ep_details">
+                                <h3><a href="single_podcast.html">Ep 1: How to build a world-class business brand</a></h3>
+                                <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+                                <a href="single_podcast.html" class="flex"><img src="assets/img/podcast/play.png" alt=""><span>Listen Now</span></a>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </section>
+
 
     </main>
 
